<resources>
    <string name="app_name">FlatFridge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_food">Add food</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="add_image">Add image</string>
    <string name="expiry_date">Expiry date</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="days_till_expiry">%1$d day(s) until expiry</string>
    <string name="days_past_expiry_date">%1$d days expired!</string>
    <string name="expires_today">Expires today</string>
    <string name="missing_name">Please enter the food name</string>
    <string name="missing_photo">Please upload a food photo</string>
    <string name="successfully_added">Successfully created food!</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="get_started">Add a food to get started</string>


    <!-- Preference Titles -->
    <string name="display_preferences">Display preferences</string>
    <string name="show_date_as">Show date as</string>
    <string name="display_items_as">Display items as</string>
    <string name="days_till_expiry_setting">Days till expiry date</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

</resources>