<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_preferences"
        app:icon="@drawable/ic_settings">

        <ListPreference
            app:defaultValue="daysTillExpiry"
            app:entries="@array/date_entries"
            app:entryValues="@array/date_values"
            app:key="date"
            app:title="@string/show_date_as"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="list"
            app:entries="@array/display_entries"
            app:entryValues="@array/display_values"
            app:key="recyclerViewDisplay"
            app:title="@string/display_items_as"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>




</PreferenceScreen>